{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 16,
  "lineage": "5a2a7759-3d88-f56d-2e94-9ebb5419383c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0c4628bbf824c5b",
            "arn": "arn:aws:ec2:us-east-1:576076729982:elastic-ip/eipalloc-0b0c4628bbf824c5b",
            "domain": "vpc",
            "id": "eipalloc-0b0c4628bbf824c5b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-3-65-224.compute-1.amazonaws.com",
            "public_ip": "52.3.65.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "FirstName_LastName_nat_eip"
            },
            "tags_all": {
              "Name": "FirstName_LastName_nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:internet-gateway/igw-0e1da490de0058bb9",
            "id": "igw-0e1da490de0058bb9",
            "owner_id": "576076729982",
            "tags": {
              "Name": "FirstName_LastName_igw"
            },
            "tags_all": {
              "Name": "FirstName_LastName_igw"
            },
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0c4628bbf824c5b",
            "association_id": "eipassoc-0be4032dc52d9ecac",
            "connectivity_type": "public",
            "id": "nat-00714c2844b7cbba0",
            "network_interface_id": "eni-07159ddffcbeaba45",
            "private_ip": "10.0.1.39",
            "public_ip": "52.3.65.224",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b331494b97dc326",
            "tags": {
              "Name": "FirstName_LastName_nat_gateway"
            },
            "tags_all": {
              "Name": "FirstName_LastName_nat_gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:route-table/rtb-02682025f28e9cdc3",
            "id": "rtb-02682025f28e9cdc3",
            "owner_id": "576076729982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00714c2844b7cbba0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "FirstName_LastName_private_rt"
            },
            "tags_all": {
              "Name": "FirstName_LastName_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:route-table/rtb-0651c57228c8c0739",
            "id": "rtb-0651c57228c8c0739",
            "owner_id": "576076729982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1da490de0058bb9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "FirstName_LastName_public_rt"
            },
            "tags_all": {
              "Name": "FirstName_LastName_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df5d2ef50debc0cd",
            "route_table_id": "rtb-02682025f28e9cdc3",
            "subnet_id": "subnet-01579d3e6d0b696bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f19d6545c8b3db57",
            "route_table_id": "rtb-02682025f28e9cdc3",
            "subnet_id": "subnet-0d2f75dda3feec2c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee4332ce0dfe79c",
            "route_table_id": "rtb-0651c57228c8c0739",
            "subnet_id": "subnet-09b331494b97dc326"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1457b894841ec88",
            "route_table_id": "rtb-0651c57228c8c0739",
            "subnet_id": "subnet-00e3a42580704a640"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-01579d3e6d0b696bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01579d3e6d0b696bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FirstName_LastName_private_subnet_1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "FirstName_LastName_private_subnet_1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-0d2f75dda3feec2c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f75dda3feec2c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FirstName_LastName_private_subnet_2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "FirstName_LastName_private_subnet_2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-09b331494b97dc326",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b331494b97dc326",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FirstName_LastName_public_subnet_1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "FirstName_LastName_public_subnet_1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-00e3a42580704a640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3a42580704a640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FirstName_LastName_public_subnet_2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "FirstName_LastName_public_subnet_2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0088dcef07db7c959"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:vpc/vpc-0088dcef07db7c959",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f9b088f5ab9726f",
            "default_route_table_id": "rtb-07b7003fe30a8f397",
            "default_security_group_id": "sg-00e3e368b86a7ab5d",
            "dhcp_options_id": "dopt-07ddee6c4510c2c01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0088dcef07db7c959",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b7003fe30a8f397",
            "owner_id": "576076729982",
            "tags": {
              "Name": "FirstName_LastName_vpc"
            },
            "tags_all": {
              "Name": "FirstName_LastName_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}